@@ -1341,28 +1341,30 @@ validSlotNames <- function(names) {
 }
 
 ### utility function called from primitive code for "@"
-getDataPart <- function(object) {
+getDataPart <- function(object, NULL.for.none = FALSE) {
     if(typeof(object) == "S4") {
         ## explicit .Data or .xData slot
         ## Some day, we may merge both of these as .Data
         value <- attr(object, ".Data")
         if(is.null(value)) {
             value <- attr(object, ".xData")
-            if(is.null(value))
+            if(is.null(value) && !NULL.for.none)
               stop("Data part is undefined for general S4 object")
-          }
-        if(identical(value, .pseudoNULL))
-          return(NULL)
-        else
-          return(value)
+        }
+        return(if(identical(value, .pseudoNULL)) NULL else value)
     }
     temp <- getClass(class(object))@slots
     if(length(temp) == 0L)
         return(object)
-    if(is.na(match(".Data", names(temp))))
-       stop(gettextf("no '.Data' slot defined for class %s",
-                     dQuote(class(object))),
-            domain = NA)
+    if(is.na(match(".Data", names(temp)))) {
+        if(NULL.for.none)
+            return(NULL)
+        else
+            stop(gettextf("no '.Data' slot defined for class %s",
+                          dQuote(class(object))),
+                 domain = NA)
+    }
+    ## else
     dataPart <- temp[[".Data"]]
     switch(dataPart,
            ## the common cases, for efficiency
@@ -1429,8 +1431,10 @@ setDataPart <- function(object, value, check = TRUE) {
     else
         ClassDef <- getClass(cl, TRUE)
 
-    switch(cl, matrix = , array = value <- cl,
-           value <- elNamed(ClassDef@slots, ".Data"))
+    value <- switch(cl,
+                    matrix = , array = cl,
+                    ## otherwise
+                    elNamed(ClassDef@slots, ".Data"))
     if(is.null(value)) {
         if(.identC(cl, "structure"))
             value <- "vector"
@@ -2501,4 +2505,3 @@ isMixin <- function(classDef) {
     is.environment(env) && exists(what, envir = env, inherits = FALSE) &&
        bindingIsLocked(what, env)
 }
-
